[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
livekit = "0.3.2"
livekit-api = "0.3.2"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
