[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
serde_json = "1.0.132"
livekit-api = { version = "0.4.0", features = ["signal-client-tokio"] }
dotenv = "0.15.0"
